# AgenticRag

./: .cursorignore  .env.example  .gitignore  README.md  ingestion.py  main.py  pyproject.toml  pytest.ini  requirements.txt
app/: cache.py  cli.py  config.py  ingestion.py  server.py
app/api/: auth.py  chat.py  deps.py  pages.py  threads.py
app/graph/: graph.py  state.py
app/graph/chains/: answer_grader.py  hallucination_grader.py  retrieval_grader.py  router.py
app/graph/nodes/: generate.py  grade_documents.py  retrieve.py  web_search.py
frontend/: chat.html  index.html
frontend/css/: styles.css
frontend/js/: auth.js  chat.js
graph/: graph.py  state.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrievel_grader.py
graph/chains/tests/: test_chains.py
graph/nodes/: generate.py  grade_documents.py  web_search.py
migrations/: 001_create_threads.sql
tests/: test_chains.py
